--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\""
+    "start": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\"",
+    "postinstall": "cd frontend && npm install && cd ../backend && npm install"
   },
   "keywords": [],
   "author": "",
